# Mortal_Kitchen

./: .gitignore  README.md
LibSL-bin-win32/lib/: 3ds-d.lib  3ds.lib  AntTweakBar.lib  LibSL_gl.lib  LibSL_gl4.lib  LibSL_linalg-d.lib  LibSL_linalg.lib  hashlibpp-d.lib  hashlibpp.lib  jpeg-d.lib  jpeg.lib  loki-d.lib  loki.lib  newmat-d.lib  newmat.lib  nl-d.lib  nl.lib  png-d.lib  png.lib  tinyxml-d.lib  tinyxml.lib  zlib-d.lib  zlib.lib
LibSL-bin-win32/src/LibSL/: LibSL.config.h  LibSL.precompiled.h  LibSL_gl.config.h
LibSL-bin-win32/src/LibSL/CppHelpers/: CppHelpers.h
LibSL-bin-win32/src/LibSL/DataStructures/: GraphAlgorithms.h
LibSL-bin-win32/src/LibSL/GLHelpers/: AutoBindShader.h
LibSL-bin-win32/src/LibSL/GPUHelpers/: GPUHelpers_gl.h
LibSL-bin-win32/src/LibSL/GPUMesh/: GPUMesh_CompilePolicy_GL_DisplayList.h  GPUMesh_GL_funcs.h  GPUMesh_gl.h  GPUMesh_gl4.h
LibSL-bin-win32/src/LibSL/GPUTex/: GPUTex.h  GPUTex_GL_formats.h  GPUTex_GL_types.h  GPUTex_gl.h
LibSL-bin-win32/src/LibSL/Geometry/: Components.h  Contour.h  ImplicitShape.h  MarchingCubes.h
LibSL-bin-win32/src/LibSL/Image/: DistanceField.h
LibSL-bin-win32/src/LibSL/LinAlg/: LeastSquareSolver.h  PCA.h
LibSL-bin-win32/src/LibSL/Math/: Histogram.h  Matrix4x4.h
LibSL-bin-win32/src/LibSL/Memory/: Array.h  Array3D.h
LibSL-bin-win32/src/LibSL/Mesh/: Mesh.h  TexturedMeshRenderer.h  VertexFormat_dynamic.h
LibSL-bin-win32/src/LibSL/System/: System.h
LibSL-bin-win32/src/LibSL/UIHelpers/: Manipulator.h
LibSL-bin-win32/src/libs/src/glux/: CMakeLists.txt
LibSL-bin-win32/src/libs/src/jpeg/: CMakeLists.txt
LibSL-bin-win32/src/libs/src/lib3ds/: CMakeLists.txt
LibSL-bin-win32/src/tools/autobindshader/: AutoBindShader.cmake
Main/LibSL-bin-win32/: CREDITS.txt  README.txt  libsl-config.cmake
Main/LibSL-bin-win32/src/LibSL/: LibSL.h  LibSL_gl.h  LibSL_linalg.h
Main/LibSL-bin-win32/src/libs/src/: CMakeLists.txt  README.txt
Main/LibSL-bin-win32/src/libs/src/OpenNL/examples/: make_test.bat
Main/LibSL-bin-win32/src/libs/src/anttweakbar/: CMakeLists.txt
Main/LibSL-bin-win32/src/libs/src/anttweakbar/src/: TwMgr.cpp
Main/LibSL-bin-win32/src/libs/src/glux/: README
Main/LibSL-bin-win32/src/libs/src/glux/gluxinfo/: CMakeLists.txt  gluxinfo.cpp
Main/LibSL-bin-win32/src/libs/src/glux/profiles/: glux_profile#GeForce 8800 Ultra_PCI_SSE2#2.1.1#Windows
Main/LibSL-bin-win32/src/libs/src/glux/samples/: sample0.cpp  sample1.cpp  sample3.cpp
Main/LibSL-bin-win32/src/libs/src/glux/script/: gen_plugins.pl
Main/LibSL-bin-win32/src/libs/src/glux/src/: GLX_ARB_create_context.h  GLX_ARB_create_context_profile.h  GLX_ARB_fbconfig_float.h  GLX_ARB_get_proc_address.h  GLX_ARB_multisample.h  GLX_EXT_framebuffer_sRGB.h  GLX_EXT_import_context.h  GLX_EXT_swap_control.h  GLX_EXT_swap_control_tear.h  GLX_EXT_visual_info.h  GLX_EXT_visual_rating.h  GLX_INTEL_swap_event.h  GLX_MESA_release_buffers.h  GLX_MESA_set_3dfx_mode.h  GLX_NV_copy_image.h  GLX_NV_float_buffer.h  GLX_NV_video_out.h  GLX_NV_video_output.h  GLX_OML_sync_control.h  GLX_SGIS_multisample.h  GLX_SGIS_shared_multisample.h  GLX_SGIX_fbconfig.h  GLX_SGIX_hyperpipe.h  GLX_SGIX_pbuffer.h  GLX_SGIX_swap_barrier.h  GLX_SGIX_swap_group.h  GLX_SGIX_video_resize.h  GLX_SGI_swap_control.h  GL_AMD_debug_output.h  GL_AMD_depth_clamp_separate.h  GL_AMD_draw_buffers_blend.h  GL_AMD_performance_monitor.h  GL_AMD_pinned_memory.h  GL_AMD_shader_stencil_export.h  GL_AMD_sparse_texture.h  GL_AMD_vertex_shader_tesselator.h  GL_APPLE_client_storage.h  GL_APPLE_element_array.h  GL_APPLE_fence.h  GL_APPLE_flush_buffer_range.h  (+258 more)
Main/LibSL-bin-win32/src/libs/src/hashlibpp/: CMakeLists.txt
Main/LibSL-bin-win32/src/libs/src/lib3ds/src/: lib3ds.h
Main/LibSL-bin-win32/src/libs/src/newmat/: CMakeLists.txt
Main/LibSL-bin-win32/src/libs/src/png/: CMakeLists.txt
Main/LibSL-bin-win32/src/libs/src/tinyxml/: CMakeLists.txt
Main/src-2015/: CMakeLists.txt
Main/src-2015/common/: CMakeLists.txt  base.cpp  base.h  drawimage.cpp  drawimage_sh.fp
Main/src-2015/data/scripts/: level.lua
Main/src-2015/data/tilemap/: test.lua
Main/src-2015/installer/: CMakeLists.txt  installer.vdproj  ~Mortal_Kitchen.DDF
Main/src-2015/installer/Debug/: installer.msi
Main/src-2015/installer/Release/: installer.msi
Main/src-2015/lib/: CMakeLists.txt
Main/src-2015/lib/Box2D/Box2D/Box2D/: CMakeLists.txt
Main/src-2015/lib/Box2D/Box2D/Box2D/Collision/: b2BroadPhase.h  b2DynamicTree.h
Main/src-2015/lib/luabind/: CMakeLists.txt
Main/src-2015/src/Mortal_Kitchen/: CMakeLists.txt  entity.cpp  entity.h  main.cpp  script.cpp  script.h  tilemap.cpp  tilemap.h
src-2015/: CMakeLists.txt
src-2015/Setup/: Mortal_Kitchen-setup.SED  Setup.vdproj
src-2015/Setup/Release/: Setup.msi
src-2015/common/: drawimage.h  drawimage_sh.vp
src-2015/data/scripts/: blow.lua  coin.lua  drop.lua  drop_yellow.lua  ennemy.lua  ketchup-high.lua  ketchup.lua  kick.lua  level.lua  level1.lua  level2.lua  life.lua  maxipain.lua  mayo-high.lua  mayo.lua  meat.lua  meatboy.lua  oignon.lua  player.lua  punch.lua  salad.lua  sergio_punch.lua  tomato.lua  wall.lua
src-2015/data/sprites/: meatboy.fight_right.psd
src-2015/installer/: Mortal_Kitchen.SED  installer.vdproj  setup.SED
src-2015/installer/Debug/: installer.msi
src-2015/installer/Release/: installer.msi
src-2015/lib/: CMakeLists.txt
src-2015/lib/Box2D/Box2D/: CMakeLists.txt
src-2015/lib/Box2D/Box2D/Box2D/Collision/: b2DynamicTree.cpp
src-2015/lib/Box2D/Box2D/Box2D/Dynamics/: b2World.h
src-2015/lib/libsndfile/: CMakeLists.txt
src-2015/lib/lua/: CMakeLists.txt
src-2015/lib/luabind/: c.txt
src-2015/src/Mortal_Kitchen/: CMakeLists.txt  background.cpp  background.h  entity.cpp  entity.h  main.cpp  physics.cpp  physics.h  sound.cpp  sound.h  tilemap.cpp  tilemap.h  write.cpp  write.h
src-2015/src/Setup/: CMakeLists.txt  Mortal-Kitchen_installer.SED  Mortal_Kitchen-installer.SED  Setup.vdproj  mortal-kitchen_setup.SED
src-2015/src/Setup/Debug/: Setup.msi  Setup.tmp
src-2015/src/Setup/Release/: Setup.msi  Setup.tmp
(+310 files in other folders)
