cmake_minimum_required(VERSION 2.6)
project(gameprog)

OPTION(_GAMEPROG_BUILD_BOX2D   "Build Box2D" ON)
# OPTION(_GAMEPROG_BUILD_BULLET  "Build Bullet" OFF)
OPTION(_GAMEPROG_BUILD_LUA     "Build LUA" ON)

OPTION(USE_LIBSL_BINARIES  "Use LibSL binaries from this package" ON)

IF (USE_LIBSL_BINARIES)
SET(LibSL_DIR        ${CMAKE_SOURCE_DIR}/../LibSL-bin-win32)
ENDIF (USE_LIBSL_BINARIES)

FIND_PACKAGE(LibSL)
INCLUDE_DIRECTORIES( ${LIBSL_INCLUDE_DIR} )
LINK_DIRECTORIES( ${LIBSL_BINARY_DIR} )
ADD_DEFINITIONS(-DUSE_GLUX)

INCLUDE_DIRECTORIES(common)
ADD_SUBDIRECTORY(common)

IF(WIN32)
ADD_DEFINITIONS(-DDATA_PATH=\"${CMAKE_SOURCE_DIR}/data/\")
ADD_DEFINITIONS(-DSRC_PATH=\"${CMAKE_SOURCE_DIR}/\")
ELSE(WIN32)
ADD_DEFINITIONS(-DDATA_PATH=\\"${CMAKE_SOURCE_DIR}/data/\\")
ADD_DEFINITIONS(-DSRC_PATH=\\"${CMAKE_SOURCE_DIR}/\\")
ENDIF(WIN32)

add_subdirectory( lib )
include_directories ( 
	${CMAKE_SOURCE_DIR}/lib/luabind
	${CMAKE_SOURCE_DIR}/lib/lua/src
	${CMAKE_SOURCE_DIR}/lib/boost
	# ${CMAKE_SOURCE_DIR}/lib/bullet/src
	${CMAKE_SOURCE_DIR}/lib
)
link_directories    ( ${CMAKE_SOURCE_DIR}/lib )

# ADD_SUBDIRECTORY(src/anim)
# ADD_SUBDIRECTORY(src/basic)
# ADD_SUBDIRECTORY(src/defend)
# ADD_SUBDIRECTORY(src/helloworld)
# ADD_SUBDIRECTORY(src/lighting)
# ADD_SUBDIRECTORY(src/pong)

IF (_GAMEPROG_BUILD_LUA)
# ADD_SUBDIRECTORY(src/scripting)
# ADD_SUBDIRECTORY(src/tilemap)
ADD_SUBDIRECTORY(src/Mortal_Kitchen)
ENDIF (_GAMEPROG_BUILD_LUA)

ADD_SUBDIRECTORY(installer)

IF(_GAMEPROG_BUILD_BOX2D)
INCLUDE_DIRECTORIES( lib/Box2D/Box2D/ )
ENDIF(_GAMEPROG_BUILD_BOX2D)

# IF (_GAMEPROG_BUILD_BULLET)
# ADD_SUBDIRECTORY(src/bullet)
# ENDIF (_GAMEPROG_BUILD_BULLET)

# ADD_SUBDIRECTORY(src/sprite101)
# ADD_SUBDIRECTORY(src/test_setup)
# ADD_SUBDIRECTORY(src/transforms)
