cmake_minimum_required(VERSION 2.6)
project(gameprog)

OPTION(_GAMEPROG_BUILD_BOX2D   "Build Box2D" OFF)
OPTION(_GAMEPROG_BUILD_LUA     "Build LUA" OFF)

OPTION(USE_LIBSL_BINARIES  "Use LibSL binaries from this package" ON)

IF (USE_LIBSL_BINARIES)
SET(LibSL_DIR        ${CMAKE_SOURCE_DIR}/../LibSL-bin-win32)
ENDIF (USE_LIBSL_BINARIES)

FIND_PACKAGE(LibSL)
INCLUDE_DIRECTORIES( ${LIBSL_INCLUDE_DIR} )
LINK_DIRECTORIES( ${LIBSL_BINARY_DIR} )
ADD_DEFINITIONS(-DUSE_GLUX)

INCLUDE_DIRECTORIES(common)
ADD_SUBDIRECTORY(common)

IF(WIN32)
ADD_DEFINITIONS(-DDATA_PATH=\"${CMAKE_SOURCE_DIR}/data/\")
ADD_DEFINITIONS(-DSRC_PATH=\"${CMAKE_SOURCE_DIR}/\")
ELSE(WIN32)
ADD_DEFINITIONS(-DDATA_PATH=\\"${CMAKE_SOURCE_DIR}/data/\\")
ADD_DEFINITIONS(-DSRC_PATH=\\"${CMAKE_SOURCE_DIR}/\\")
ENDIF(WIN32)

add_subdirectory( lib )
include_directories ( 
	${CMAKE_SOURCE_DIR}/lib/luabind
	${CMAKE_SOURCE_DIR}/lib/lua/src
	${CMAKE_SOURCE_DIR}/lib/boost
	${CMAKE_SOURCE_DIR}/lib
)
link_directories    ( ${CMAKE_SOURCE_DIR}/lib )

INCLUDE_DIRECTORIES( lib/Box2D/Box2D/ )
ADD_SUBDIRECTORY(src/Mortal_Kitchen)

