CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dependencies)

IF (_GAMEPROG_BUILD_LUA)
ADD_SUBDIRECTORY(lua)
ADD_SUBDIRECTORY(luabind)
ENDIF (_GAMEPROG_BUILD_LUA)

IF (_GAMEPROG_BUILD_BULLET)
ADD_SUBDIRECTORY(bullet)
ENDIF (_GAMEPROG_BUILD_BULLET)

IF (_GAMEPROG_BUILD_BOX2D)
ADD_SUBDIRECTORY(Box2D/Box2D)
ENDIF (_GAMEPROG_BUILD_BOX2D)
