CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_SUBDIRECTORY(jpeg)

ADD_SUBDIRECTORY(zlib)

ADD_SUBDIRECTORY(png)

ADD_SUBDIRECTORY(loki)

ADD_SUBDIRECTORY(newmat)

ADD_SUBDIRECTORY(lib3ds)

ADD_SUBDIRECTORY(glux)

ADD_SUBDIRECTORY(anttweakbar)

ADD_SUBDIRECTORY(OpenNL)

ADD_SUBDIRECTORY(tinyxml)

# ADD_SUBDIRECTORY(tinysvg)

# ADD_SUBDIRECTORY(libxml2)

ADD_SUBDIRECTORY(hashlibpp)
